integration-tests/tests/integration/snapshots/integration__show_config_test_groups-6.snap
---
source: integration-tests/tests/integration/main.rs
expression: with_termination_all_output.stdout_as_str()
---
group: flaky (max threads = 4)
    (no matches)
group: serial (max threads = 1)
    (no matches)
group: unused (max threads = 20)
    (no matches)
group: @global
  * override for with-termination profile with filter 'test(=test_slow_timeout_2)' (from .config/nextest.toml):
      fixture-project::basic:
  * from default settings:
      cdylib-example:
          tests::test_multiply_two_cdylib
      cdylib-link:
          test_multiply_two
      fixture-project:
          tests::call_dylib_add_two
          tests::unit_test_success
      fixture-project::basic:
          test_cargo_env_vars
          test_cwd
          test_execute_bin
          test_failure_assert
          test_failure_error
          test_failure_should_panic
          test_flaky_mod_3
          test_flaky_mod_4
          test_flaky_mod_6
          test_overrides_wrapper_env
          test_result_failure
          test_stdin_closed
          test_stress_fail_first_iteration
          test_subprocess_doesnt_exit
          test_subprocess_doesnt_exit_fail
          test_subprocess_doesnt_exit_leak_fail
          test_success
          test_success_should_panic
      fixture-project::other:
          other_test_success
      fixture-project::segfault:
          test_segfault
      fixture-project::bench/my-bench:
          bench_add_two
          tests::test_execute_bin
      fixture-project::bin/fixture-project:
          tests::bin_success
      fixture-project::bin/other:
          tests::other_bin_success
      fixture-project::example/fixture-project:
          tests::example_success
      fixture-project::example/other:
          tests::other_example_success
      nextest-derive:
          it_works
      with-build-script:
          tests::test_build_script_vars_set
          tests::test_out_dir_present
